# JniBaseCode

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt  jni_demo_com_jnidemo_jni_JniUtils.h
app/src/main/cpp/: CCounter.h  CMakeLists.txt  getDeviceCode.cpp  getPackageInfo.cpp  jni.cpp  jniRegisiter.h  jniStudyDemo.cpp  onLoad.cpp  onLoad.h  test.cpp
app/src/main/cpp/call_so/: call_so.cpp  call_so.h
app/src/main/cpp/call_so/include/: Add.h
app/src/main/cpp/call_static/: call_static.cpp  call_static.h
app/src/main/cpp/call_static/include/: add.h
app/src/main/cpp/file_operate/: file_operate.cpp  file_operate.h
app/src/main/cpp/http_curl/: DownloadModule.cpp  DownloadModule.h  HttpPostModule.cpp  HttpPostModule.h  JNIUtil.cpp  JNIUtil.h  my_curl.cpp  my_curl.h
app/src/main/cpp/my_stl/: my_stl.cpp  my_stl.h
app/src/main/cpp/thread/: my_thread.cpp  my_thread.h
app/src/main/java/jni/demo/com/jnidemo/: MainActivity.java  PackageInfoUtils.java  TestActivity.java
app/src/main/java/jni/demo/com/jnidemo/bean/: Person.java
app/src/main/java/jni/demo/com/jnidemo/jni/: JDeviceCode.java  JNativeInterface.java  JniStudyDemo.java  JniUtils.java
app/src/main/java/jni/demo/com/jnidemo/utils/: Base64Utils.java  DeviceIdUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
